# credit-scorecard-risk-model

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_pipeline.ps1
.github/workflows/: tests.yml
artifacts/reports/: approval_cutoffs.csv  feature_importance.csv  metrics.json  model_report.md  score_band_bad_rates.csv  scorecard_table.csv
docs/: project_brief.md
scripts/: run_pipeline.py
src/credit_scorecard/: __init__.py  binning.py  data.py  metrics.py  reporting.py  scorecard.py
tests/: test_binning.py  test_pipeline.py
