[project]
name = "credit-scorecard-risk-model"
version = "0.1.0"
description = "使用 WOE 分箱和逻辑回归构建的可复现零售信贷风险评分卡项目。"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "scikit-learn>=1.5",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "pytest>=8.0",
  "joblib>=1.4",
  "tabulate>=0.9",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
